Commit before big change: aggregate last 8 move and last 8 inputs